HHH-18846 Enable release automation for ORM 6.6